--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.18.2",
     "axios": "^1.6.2",
+    "i18next": "^23.16.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^6.20.0",
     "react-to-print": "^2.15.1",
     "react-toastify": "^9.1.3",
